made header layout, exported images

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <!-- import of html parts -->
   </main>
   @@include('html-parts/footer.html', {})
+  @@include('html-parts/modal-entry.html', {})
   </body>
 
 </html>
